# neandertools

./: .gitignore  README.md  pyproject.toml  run_pipeline.py  tutorial.ipynb  tutorial3.ipynb  tutorial_neandertools.ipynb
src/neandertools/: __init__.py  butler.py  errors.py  imagebuilder.py  pipeline.py  trackbuilder.py  visualization.py
tests/: test_butler_service.py
