[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neandertools"
version = "0.1.0"
description = "Utilities for generating image cutouts from Rubin/LSST Butler repositories."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "neandertools developers"}]
license = {text = "MIT"}
dependencies = [
  "numpy",
  "astropy",
  "astroquery",
  "matplotlib",
]

[project.optional-dependencies]
lsst = []
dev = [
  "pytest>=8",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
